@@ -6,7 +6,7 @@ inThisBuild(Seq(
   organization := "org.hathitrust.htrc",
   organizationName := "HathiTrust Research Center",
   organizationHomepage := Some(url("https://www.hathitrust.org/htrc")),
-  scalaVersion := "2.13.11",
+  scalaVersion := "2.13.14",
   scalacOptions ++= Seq(
     "-feature",
     "-deprecation",
@@ -40,7 +40,7 @@ lazy val ammoniteSettings = Seq(
       val version = scalaBinaryVersion.value match {
         case "2.10" => "1.0.3"
         case "2.11" => "1.6.7"
-        case _ ⇒  "2.5.9"
+        case _ ⇒  "3.0.0-M1-24-26133e66"
       }
       "com.lihaoyi" % "ammonite" % version % Test cross CrossVersion.full
     },
@@ -56,8 +56,8 @@ lazy val ammoniteSettings = Seq(
 lazy val `bibframe2jsonld` = (project in file("."))
   .enablePlugins(GitVersioning, GitBranchPrompt, JavaAppPackaging)
   .settings(ammoniteSettings)
-//    .settings(spark("3.4.1"))
-  .settings(spark_dev("3.4.1"))
+//    .settings(spark("3.5.1"))
+  .settings(spark_dev("3.5.1"))
   .settings(
     name := "bibframe2jsonld",
     description := "Used to convert enriched BIBFRAME-XML to HTRC metadata JSONLD",
@@ -69,12 +69,18 @@ lazy val `bibframe2jsonld` = (project in file("."))
       "org.hathitrust.htrc"           %% "scala-utils"          % "2.14.4",
       "org.hathitrust.htrc"           %% "spark-utils"          % "1.5.4",
       "com.github.nscala-time"        %% "nscala-time"          % "2.32.0",
-      "ch.qos.logback"                %  "logback-classic"      % "1.3.11",  // 1.3.x is for Java8, 1.4.x for Java11
-      "org.codehaus.janino"           %  "janino"               % "3.1.10",
-      "org.scalacheck"                %% "scalacheck"           % "1.17.0"      % Test,
-      "org.scalatest"                 %% "scalatest"            % "3.2.16"      % Test,
+      "ch.qos.logback"                %  "logback-classic"      % "1.5.6",
+      "org.codehaus.janino"           %  "janino"               % "3.1.12",
+      "org.scalacheck"                %% "scalacheck"           % "1.18.0"      % Test,
+      "org.scalatest"                 %% "scalatest"            % "3.2.18"      % Test,
       "org.scalatestplus"             %% "scalacheck-1-15"      % "3.2.11.0"    % Test
     ),
+    Universal / javaOptions ++= Seq(
+      "base/java.lang", "base/java.lang.invoke", "base/java.lang.reflect", "base/java.io", "base/java.net", "base/java.nio",
+      "base/java.util", "base/java.util.concurrent", "base/java.util.concurrent.atomic",
+      "base/sun.nio.ch", "base/sun.nio.cs", "base/sun.security.action",
+      "base/sun.util.calendar", "security.jgss/sun.security.krb5",
+    ).map("-J--add-opens=java." + _ + "=ALL-UNNAMED"),
     Test / parallelExecution := false,
     Test / fork := true,
     evictionErrorLevel := Level.Info
